<resources>
    <string name="app_name">HackathonProject</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_to_sherwood">Welcome to Sherwood!</string>
    <string name="register_here">Register here</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_here">Login here</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fuck_you_abhi">fuck you abhi</string>
    =
</resources>